mobile overflow fix attempt

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -21,6 +21,10 @@
   font-weight: normal;
   font-style: normal;
 }
+.hide-overlay {
+  overflow-x: hidden;
+}
+
 .border-divider {
   width: 100%;
   height: 150px; /* Adjust height as needed */
